change styles botom contact

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,9 +1,12 @@
 <!-- Botón de contacto -->
-<div class="divider"></div>
+<div class="container2">
+  <h2 class="text-center">Si te interesa la propuesta o tenes alguna consulta </h2>
+  <p class="text-center parrafo2">O si te interesa formar parte de nuestro equipo, envíanos un mensaje con tus datos y nos pondremos en contacto.</p>
 <div id="contact" class="text-center my-5">
   <button type="button" class="btn btn-primary btn-lg btn-contacto" data-bs-toggle="modal" data-bs-target="#contactModal">
     Contactanos!
   </button>
+</div>
 </div>
 
 <!-- Modal -->
