--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -162,6 +162,10 @@
       margin: 0.2rem 0;
       color: #00c2f3;
   }
+  .descripcion{
+    justify-content: center;
+    font-size: 1rem ;
+  }
 
  
     h2, p {
@@ -174,8 +178,6 @@
     }
   
     p {
-      justify-content: center;
-      font-size: 1rem ;
       font-size: 1.2rem; // Ajusta el tamaño del párrafo
       margin-top: 15px;
     }
