--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -16,7 +16,7 @@
   <div id="cardsCarousel" class="carousel slide d-block d-md-none" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item" *ngFor="let card of cards; let i = index" [class.active]="i === 0">
-        <div class="card border-0 shadow-sm mx-auto" >
+        <div class="card border-0 shadow-sm mx-auto">
           <div class="card-body">
             <h5 class="card-title">{{ card.title }}</h5>
             <p class="card-text">{{ card.text }}</p>
@@ -24,9 +24,13 @@
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#cardsCarousel" data-bs-slide="prev">
+    
+    <!-- Botones de control del carrusel -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#cardsCarousel" data-bs-slide="prev" aria-label="Previous">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#cardsCarousel" data-bs-slide="next">     
+    <button class="carousel-control-next" type="button" data-bs-target="#cardsCarousel" data-bs-slide="next" aria-label="Next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
     </button>
   </div>
 
