--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -109,7 +109,8 @@ h2.text-center::after {
 }
 
 .card-title{
-  text-shadow:#000000 0 0.5px 0.5px ;
+  color: #00c2f3;
+  text-shadow:#000000 0 0.5px 1px ;
 }
 .card-text{
   font-size: 1rem;
