--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -86,7 +86,7 @@
       height: 300px; /* Tamaño por defecto */
       margin: 1rem;
       perspective: 1000px;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.6);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9), 0 6px 20px rgba(0, 0, 0, 0.9) ; /* Añade sombra para más profundidad */
       border-radius: 10px; /* Mejora las esquinas redondeadas */
       
@@ -161,6 +161,7 @@
     font-size: 1.3rem !important;
       margin: 0.2rem 0;
       color: #00c2f3;
+      text-decoration: underline; 
   }
   .descripcion{
     justify-content: center;
