swipe touch cards

--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -111,6 +111,7 @@ h2.text-center::after {
 .card-title{
   color: #00c2f3;
   text-shadow:#000000 0 0.5px 1px ;
+  text-decoration: underline; 
 }
 .card-text{
   font-size: 1rem;
