--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -52,27 +52,17 @@ h2.text-center {
     position: relative;
     display: inline-block;
     transition: color 0.5s ease-in-out; /* Transición suave del color */
+    text-decoration:underline ; 
+        text-underline-offset: 5px;
 
       &:hover {
-        color: #000000; /* Color al hacer hover */
-        text-shadow: #ffffff 0 1px 1px;
+        color:#00c2f3; /* Color al hacer hover */
+        text-shadow: #000000 0 5px 5px;
+        
       }
 }
 
-h2.text-center::after {
-  content: '';
-  width: 60px;
-  /*Longituddelalínea*/height: 4px;
-  /*Grosordelalínea*/background-color: #c0c0c0;
-  /*Colordelalíneacoincidente*/position: absolute;
-  bottom: -10px;
-  /*Espaciadodesdeeltexto*/left: 50%;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-}
+
 
 /* Contenedor de las tarjetas */
 .card-container {
