--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -66,10 +66,12 @@
     position: relative;
     display: inline-block;
     transition: color 0.5s ease-in-out; /* Transición suave del color */
+    text-decoration:underline ; 
+    text-underline-offset: 5px;
 
     &:hover {
-      color: #000000; /* Color al hacer hover */
-      text-shadow: #ffffff 0 1px 1px;
+      color:#00c2f3; /* Color al hacer hover */
+        text-shadow: #000000 0 5px 5px;
     }
   }
   
