--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -50,12 +50,14 @@ h2 {
   position: relative;
   display: inline-block;
   transition: color 0.5s ease-in-out;
+  text-decoration:underline ; 
+  text-underline-offset: 5px;
   /* Transición suave del color */
 
   &:hover {
-    color: #000000;
-    /* Color al hacer hover */
-    text-shadow: #ffffff 0 1px 1px;
+    color:#00c2f3; /* Color al hacer hover */
+        text-shadow: #000000 0 5px 5px;
+        
   }
 }
 
