--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -17,10 +17,12 @@
       position: relative;
       display: inline-block;
       transition: color 0.5s ease-in-out;
+      text-decoration:underline ; 
+        text-underline-offset: 5px;
 
       &:hover {
           color: #00c2f3;
-          text-shadow: #ffffff 0 1px 1px;
+          text-shadow: #000000 0 2px 2px;
       }
   }
 
