--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -52,8 +52,8 @@ h2.text-center {
     position: relative;
     display: inline-block;
     transition: color 0.5s ease-in-out; /* Transición suave del color */
-    text-decoration:underline ; 
-        text-underline-offset: 5px;
+    text-decoration:underline 1px ; 
+        text-underline-offset: 10px;
 
       &:hover {
         color:#00c2f3; /* Color al hacer hover */
@@ -101,7 +101,9 @@ h2.text-center {
 .card-title{
   color: #00c2f3;
   text-shadow:#000000 0 0.5px 1px ;
-  text-decoration: underline; 
+  text-decoration:underline 1px ; 
+  text-underline-offset: 10px;
+
 }
 .card-text{
   font-size: 1rem;
