--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -66,8 +66,9 @@
     position: relative;
     display: inline-block;
     transition: color 0.5s ease-in-out; /* Transición suave del color */
-    text-decoration:underline ; 
-    text-underline-offset: 5px;
+    text-decoration:underline 1px ; 
+    text-underline-offset: 10px;
+
 
     &:hover {
       color:#00c2f3; /* Color al hacer hover */
