--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -50,9 +50,9 @@ h2 {
   position: relative;
   display: inline-block;
   transition: color 0.5s ease-in-out;
-  text-decoration:underline ; 
-  text-underline-offset: 5px;
-  /* Transición suave del color */
+  text-decoration:underline 1px ; 
+  text-underline-offset: 10px;
+
 
   &:hover {
     color:#00c2f3; /* Color al hacer hover */
@@ -121,7 +121,9 @@ p {
 }
 strong{
   color: #00ccff;
-  text-decoration: underline; 
+  text-decoration:underline 1px ; 
+  text-underline-offset: 5px;
+
   
 }
 
