--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -17,8 +17,9 @@
       position: relative;
       display: inline-block;
       transition: color 0.5s ease-in-out;
-      text-decoration:underline ; 
-        text-underline-offset: 5px;
+      text-decoration:underline 1px ; 
+      text-underline-offset: 10px;
+
 
       &:hover {
           color: #00c2f3;
@@ -53,7 +54,9 @@
       margin-bottom: 0.5rem; // Espaciado entre elementos
         text-align: left;
       strong {
-        text-decoration: underline; 
+        text-decoration:underline 1px ; 
+        text-underline-offset: 5px;
+
         color: #00c2f3;
         min-width: 200px; // Ajusta el ancho mínimo del título para alinear los textos
         display: inline-block; // Asegura que todos los títulos ocupen el mismo ancho
