--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,12 +1,14 @@
 
 @defer() {
   <section id="banner">
-    <app-banner></app-banner>
+    <app-banner/>
   </section>
+  <div class="home">
   <section id="presentation">
     <app-menu-item></app-menu-item>
   </section>
   <app-nosotros></app-nosotros>
   <app-nuestra-manera></app-nuestra-manera>
   <app-contact></app-contact>
+</div>
 }
