--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -1,7 +1,7 @@
 .divider {
   width: 80%;
   height: 2px;
-  background-color: rgba(232, 232, 232, 0.6);
+  background-color: rgba(232, 232, 232, 0.0);
   /* Color dorado claro para la línea */
   margin: 40px auto;
   /* Espacio alrededor de la línea y centrado horizontal */
@@ -15,6 +15,8 @@
   flex-direction: column;
   align-items: center;
   color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.8);
+  max-width: 100%;
 }
 
 .icon-wrapper {
