--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,6 +4,7 @@
     <app-banner/>
   </section>
   <div class="home">
+    <div class="black-stripe"></div>
   <section id="presentation">
     <app-menu-item></app-menu-item>
   </section>
