--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,9 +1,37 @@
+/* 
 .home{ 
     min-height: calc(100vh - 1px); 
     background: url('../../../assets/leonardo-banner.jpg'); /* Ruta de la imagen en tu proyecto */
-    background-size: cover; /* Ajusta la imagen para que se vea completamente sin recortarse */
-    background-position: center; /* Centra la imagen en la pantalla */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-attachment: fixed; /* Hace que la imagen quede fija mientras se hace scroll */
+/*    background-size: cover; /* Ajusta la imagen para que se vea completamente sin recortarse */
+/*    background-position: center; /* Centra la imagen en la pantalla */
+/*    background-repeat: no-repeat; /* Evita que la imagen se repita */
+/*    background-attachment: fixed; /* Hace que la imagen quede fija mientras se hace scroll */
    
-}
+/*  }*/
+
+.home {
+    position: relative;
+    background: linear-gradient(to right, blue, rgb(59, 87, 226), rgb(212, 246, 255)); /* Gradiente de azul a celeste */
+    overflow: hidden;
+    z-index: 0; /* Fondo detrás del contenido */
+  }
+  
+  .black-stripe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at 5% 5%, rgba(0, 0, 0, 1 ) 15%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0) 70%);
+    mix-blend-mode: multiply; /* Mezclar el fondo para que se integre mejor *
+    pointer-events: none; /* No interferir con los elementos interactivos */
+    z-index: -1; /* Colocar la franja negra detrás del contenido */
+  }
+  
+  #presentation,
+  app-nosotros,
+  app-nuestra-manera,
+  app-contact {
+    position: relative;
+    z-index: 1; /* Colocar el contenido principal por encima de la franja negra */
+  }
