--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -36,14 +36,14 @@
   width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: rgba(0, 0, 0, 0.8);
+  
 }
 
 /* Título */
 h2.text-center {
 
     text-align: center;
-    color: #ffffff; 
+    color: #fcfcfc; 
     text-shadow: #000000 0 4px 4px;
     font-size: 2.5rem; /* Tamaño de fuente más grande */
     font-weight: bold;
@@ -101,6 +101,7 @@ h2.text-center {
 }
 
 .card-title{
+  
   color: #00c2f3;
   text-shadow:#000000 0 0.5px 1px ;
   text-decoration:underline 1px ; 
