--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,7 +1,7 @@
 
 #home {
   flex: 1;
-  background: url('../../../assets/leonardo-banner-negro.jpg') no-repeat center center;
+  background: url('../../../assets/leonardo-banner.jpg') no-repeat center center;
   background-size: cover; /* Asegura que la imagen cubra todo el área del banner */
   display: flex;
   flex-direction: column;
