--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.html
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.html
@@ -1,19 +1,8 @@
   
     <div class="divider"></div>
-
-    <div class="container text-center py-5">
-      <h2>Nuestra manera</h2>
-      <div class="row justify-content-center">
-        <div class="col-6 col-md-2 col-lg-2" *ngFor="let item of items">
-          <div class="icon-wrapper">
-            <img src="{{item.icon}}" alt="{{item.title}}">
-          </div>
-          <h4>{{item.title}}</h4>
-          <p>{{item.description}}</p>
-        </div>
-      </div>
        <!-- Imagen y texto adicional -->
   <div class="image-text-wrapper d-flex align-items-center mt-5">
+    <div class="overlay" id="imageOverlay"></div>
     <img src="/assets/salem_propuesta.jpg" alt="Imagen destacada" class="enlargable-image" (click)="toggleImageSize($event)">
     <div class="text-content ms-4">
       <h2>¿Qué hacemos?</h2>
@@ -29,6 +18,5 @@
       </ul>
     </div>
   </div>
-</div>
 <div class="divider"></div>
    
