--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <div [@fadeAnimation]="getRouteAnimation()">
     <router-outlet></router-outlet>
   </div>
+  <app-contact/>
   <app-footer></app-footer>
