--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -3,7 +3,7 @@
   position: fixed ;
   padding-right: 20px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.95); /* Fondo transparente */
+  background-color: rgba(255, 255, 255, 0.95); /* Fondo transparente */
   z-index: 1000 ; /* Asegúrate de que esté por encima de otros elementos */
   transition: all 0.3s ease ; /* Suaviza la transición del tamaño */
   }
@@ -11,28 +11,17 @@
 .navbar-brand,
 .nav-link {
   background-color: rgba(0, 0, 0, 0);
-  color: #ffffff;
-  transition: color 1 ease;
-  -webkit-transition: color 1 ease;
-  -moz-transition: color 1 ease;
-  -ms-transition: color 1 ease;
-  -o-transition: color 1 ease;
+  color: #000000;
+  transition: color 0.3 ease;
+  border-radius: 10px;
 }
 
 .navbar-brand:hover,
 .nav-link:hover {
- background-color: rgba(255, 255, 255);
- border-radius: 20px;
+  border-radius: 10px;
+ background-color: rgb(194, 194, 194);
  color: #000000;
- -webkit-border-radius: 20px;
- -moz-border-radius: 20px;
- -ms-border-radius: 20px;
- -o-border-radius: 20px;
- transition: background-color 2s ease, color 2s ease;
- -webkit-transition: background-color 2s ease, color 2s ease;
- -moz-transition: background-color 2s ease, color 2s ease;
- -ms-transition: background-color 2s ease, color 2s ease;
- -o-transition: background-color 2s ease, color 2s ease;
+ transition: background-color 0,3s ease, color 0,3s ease;
 }
 .navbar-toggler{
   background-color: #ffffffe0;
