--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -1,7 +1,6 @@
 
 <section id="equipo">
-  
-  
+  <div class="black-stripe"></div>
   <!-- Sección de descripción del equipo -->
   <div class="container">
     <div class="row">
@@ -44,5 +43,4 @@
       </div>
     </div>
   </div>
-    <app-contact></app-contact>
 </section>
