--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,23 +1,76 @@
-<nav id="navbar" class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <!-- Navbar a la izquierda -->
-    <img src="../../../assets/salem_final.png" (click)="scrollToSection('home')"(click)="handleNavClick('home')" class="navbar-brand me-auto img" alt="Brand Logo">
-    <button class="navbar-toggler" type="button" (click)="toggleNavbar()" aria-controls="navbarNav" aria-expanded="!isNavbarCollapsed" aria-label="Toggle navigation">
+    <img src="../../../assets/salem_final.png" (click)="scrollToSection('home')"(click)="handleNavClick('home')" class="img">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" [ngClass]="{'show': !isNavbarCollapsed}" id="navbarNav">
-      <!-- Items alineados a la derecha -->
-      <ul class="navbar-nav mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <button class="nav-link"(click)="scrollToSection('contact')" (click)="handleNavClick('contact')">Contáctanos</button>
+          <button class="nav-link"(click)="openContactModal()" >Contáctanos</button>
         </li>
         <li class="nav-item">
           <button class="nav-link"(click)="scrollToSection('seccion2')" (click)="navigateToSeccion2()">Trabaja con nosotros</button>
         </li>
         <li class="nav-item">
           <button class="nav-link" (click)="scrollToSection('home')"(click)="handleNavClick('home')">Home</button>
+
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+
+<ng-template #contactModal let-modal>
+  <div class="modal-dialog custom-modal-dialog">
+    <div class="modal-content custom-modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="contactModalLabel">Formulario de Contacto</h5>
+        <button type="button" class="btn-close" (click)="modal.dismiss('Cross click')"></button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
+          <div class="form-group mb-3">
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" name="nombre" class="form-control"
+                   [(ngModel)]="consulta.nombre" #nombre="ngModel" required>
+            <div *ngIf="nombre.invalid && nombre.touched" class="text-danger">
+              El nombre es obligatorio.
+            </div>
+          </div>
+          <div class="form-group mb-3">
+            <label for="email">Correo Electrónico</label>
+            <input type="email" id="email" name="email" class="form-control"
+                   [(ngModel)]="consulta.email" #email="ngModel" required email>
+            <div *ngIf="email.invalid && email.touched" class="text-danger">
+              Ingresa un correo electrónico válido.
+            </div>
+          </div>
+          <div class="form-group mb-3">
+            <label for="telefono">Teléfono (Opcional)</label>
+            <input type="tel" id="telefono" name="telefono" class="form-control"
+                   [(ngModel)]="consulta.telefono" #telefono="ngModel">
+          </div>
+          <div class="form-group mb-3">
+            <label for="asunto">Asunto</label>
+            <input type="text" id="asunto" name="asunto" class="form-control"
+                   [(ngModel)]="consulta.asunto" #asunto="ngModel" required>
+            <div *ngIf="asunto.invalid && asunto.touched" class="text-danger">
+              El asunto es obligatorio.
+            </div>
+          </div>
+          <div class="form-group mb-3">
+            <label for="mensaje">Mensaje</label>
+            <textarea id="mensaje" rows="5" name="mensaje" class="form-control"
+                      [(ngModel)]="consulta.mensaje" #mensaje="ngModel" required></textarea>
+            <div *ngIf="mensaje.invalid && mensaje.touched" class="text-danger">
+              El mensaje es obligatorio.
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Enviar Consulta</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</ng-template>
